fix z-index of nav

--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -9,6 +9,7 @@ nav.navbar {
   background: #fff;
   width: 100%;
   top: 0;
+  z-index: 1;
   img {
     height: 50px;
   }
